--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,16 @@
-version: '3.8'
-
 services:
-  # <YOUR SERVICES HERE>:
-  #   build: 
-  #     context: ./<YOUR SERVICE DIRECTORY>
-  #     dockerfile: Dockerfile
-  #   ports:
-  #     - "8080:8080"
-  #   depends_on:
-  #     - notification-service
+  notifications-manager:
+    build:
+      context: ./
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    depends_on:
+      - notification-service
 
   notification-service:
     image: aryekog/backend-interview-notifications-service:0.0.2
+    platform: linux/arm64
     ports:
       - "5001:5001"
     environment:
