--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - "3000:3000"
     depends_on:
       - notification-service
+    environment:
+      - NOTIFICATION_SERVICE_URI=http://notification-service:5001
 
   notification-service:
     image: aryekog/backend-interview-notifications-service:0.0.2
